data/derived/comb/progs/unify/prog5380.ml.out
Characters 76-77:
  | (f, (h1, h2)) -> if h2 then wwhile (f, (h1,h2)) else h1;;
                                        ^
Error: This expression has type 'a but an expression was expected of type
         'b -> 'a * ('c * bool)
       The type variable 'a occurs inside 'b -> 'a * ('c * bool)
